<resources>
    <string name="app_name">CollegeAppAnswerKey</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="birthday">Select Birthday</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="family_members_title"></string>
    <string name="delete_family_member">Delete Family Member</string>
    <string name="new_guardian">Add Guardian</string>
    <string name="new_sibling">Add Sibling</string>
</resources>
